--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ canvas{
 .Labels{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 0;
     align-items: center;
     text-align: center;
